--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-searchable-dropdown": "^1.1.3",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-location": "~12.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
