--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "expo": "~42.0.1",
+    "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-searchable-dropdown": "^1.1.3",
-    "react-native-web": "~0.13.12",
-    "expo-location": "~12.1.2"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
